@@ -163,4 +163,4 @@ Debe indicar que se puede dejar ventanas en background pero que también pueden 
 Etc…
 
 -completar info maquina al pulsa icono en my machine
-
+* ram ok en todas maquinas
