@@ -6,6 +6,8 @@ Added setting for path where to download files from the speccy and zx81 online b
 Added machine Spectrum 48k+
 Added machine Timex TC2048
 Added disk image browsing from storage MMC/IDE menus
+Added some actions than can be fired from command line and don't start ZEsarUX:
+--convert-tap-tzx
 
 
 Improved ZX Spectrum Next emulation: added sprite rendering priority bit
